# thegent-cli-share

./: ADR.md  CLAUDE.md  FUNCTIONAL_REQUIREMENTS.md  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/thegent_cli_share/: __init__.py  cli.py
src/thegent_cli_share/domain/: __init__.py  entities.py  events.py  value_objects.py
src/thegent_cli_share/ports/: driven.py
tests/: __init__.py  test_thegent_cli_share.py
