[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RelayPy"
version = "0.1.0"
description = "CLI share system - command deduplication, task queue, smart merge"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Koosha Pari", email = "kooshapari@kooshapari.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "watchfiles>=0.21.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
thegent-share = "thegent_cli_share.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/thegent_cli_share"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
